<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDelete">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="361dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:text="@string/delete_course_edit"
        android:textAlignment="viewStart"
        android:textColor="#6a3286"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="367dp"
        android:layout_height="63dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#6a3286"
        android:text="@string/delete_course_delete"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:textStyle="bold"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
        app:layout_constraintVertical_bias="0.064"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="372dp"
        android:layout_height="66dp"
        android:layout_marginTop="120dp"
        android:autofillHints="name of course to delete"
        android:ems="10"
        android:hint="@string/enter_the_course_code_delete"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>